Increased memory amount for Maven Surefire plugin